@@ -69,7 +69,10 @@ public class FoodItemService {
     }
 
     private FoodItemDTO convertToDTO(FoodItem foodItem) {
-        List<String> tagList = Arrays.asList(foodItem.getTags().split(",")); // Convert comma-separated string to list
+        // Handle null tags
+        List<String> tagList = foodItem.getTags() == null
+                ? List.of() // Return an empty list if tags is null
+                : Arrays.asList(foodItem.getTags().split(",")); // Otherwise, split the tags string
 
         // Fetch food shop name
         FoodShopDTO shop = foodShopService.getFoodShopById(foodItem.getShopId());
@@ -83,13 +86,23 @@ public class FoodItemService {
                 foodItem.getQuantity(),
                 foodItem.getShopId(),
                 foodItem.getPhoto(),
-                tagList,
+                tagList, // Pass the list of tags (empty if tags is null)
                 foodItem.getCategory()
         );
     }
 
     private FoodItem convertToEntity(FoodItemDTO foodItemDTO) {
-        String tags = String.join(",", foodItemDTO.getTags()); // Convert list to comma-separated string
+        String tags;
+        if (foodItemDTO.getTags() == null || foodItemDTO.getTags().isEmpty()) {
+            tags = ""; // Handle empty tags
+        } else if (foodItemDTO.getTags().size() == 1 && foodItemDTO.getTags().get(0).contains(",")) {
+            // If tags is a single string with commas, split it
+            tags = foodItemDTO.getTags().get(0);
+        } else {
+            // If tags is a list, join it with commas
+            tags = String.join(",", foodItemDTO.getTags());
+        }
+
         return new FoodItem(
                 foodItemDTO.getId(),
                 foodItemDTO.getName(),
@@ -97,7 +110,7 @@ public class FoodItemService {
                 foodItemDTO.getPrice(),
                 foodItemDTO.getQuantity(),
                 foodItemDTO.getPhoto(),
-                tags,
+                tags, // Store tags as a comma-separated string
                 foodItemDTO.getShopId(),
                 foodItemDTO.getCategory()
         );
